--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -48,6 +48,7 @@ body{
 	max-width: 100%;
 	box-sizing: border-box;
 	height: auto !important;
+	-webkit-appearance: none;
 }
 
 .w-btn{
